--- a/src/styles/general/_reset.scss
+++ b/src/styles/general/_reset.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
 }
 
