--- a/src/styles/objects/_container.scss
+++ b/src/styles/objects/_container.scss
@@ -12,7 +12,7 @@
 }
 
 .o-containerMedium {
-  width: 100vw;
+  width: 100%;
   max-width: 1440px;
   padding: 0 2vw;
   margin: 0 auto;
@@ -22,5 +22,5 @@
 }
 
 .o-containerFullWidth {
-  width: 100vw;
+  width: 100%;
 }
